--- a/VolunteeringUkraineMap/.gitignore
+++ b/VolunteeringUkraineMap/.gitignore
@@ -1,24 +1,31 @@
 # Logs
-logs
+/logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+report.*.json
+debug.log
 
-node_modules
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# macOS
+.DS_Store
+
+# Vim swap files
+*.swp
+
+# Build
 dist
 dist-ssr
-*.local
 
-# Editor directories and files
-.vscode/extensions.json
-!.vscode/extensions.json
+# IDE / Editor
 .idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# dotenv
+.env*
+*.local
+!.env.sample
+.stylelintcache
