--- a/VolunteeringUkraineMap/package.json
+++ b/VolunteeringUkraineMap/package.json
@@ -11,8 +11,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "pnpm": "^8.6.5",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-google-map": "^0.15.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
