--- a/VolunteeringUkraineMap/package.json
+++ b/VolunteeringUkraineMap/package.json
@@ -4,13 +4,15 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite --host",
-    "lint": "pnpm run lint:js && pnpm run lint:style",
-    "lint:fix": "pnpm run lint:js -- --fix && pnpm run lint:style -- --fix",
+    "lint": "npm run lint:js && pnpm run lint:style",
+    "lint:fix": "npm run lint:js -- --fix && npm run lint:style -- --fix",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore src",
     "lint:style": "stylelint **/*.{vue,css} --ignore-path .gitignore",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "copyfiles": "copyfiles -u 2 node_modules/leaflet/dist/images/* public/images"
   },
   "dependencies": {
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "pnpm": "^8.6.5",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
@@ -19,12 +21,14 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.13",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-tailwindcss": "^3.9.0",
     "eslint-plugin-vue": "^9.9.0",
+    "pnpm": "^8",
     "postcss": "^8.4.21",
     "postcss-html": "^1.5.0",
     "stylelint": "^15.2.0",
