--- a/VolunteeringUkraineMap/package.json
+++ b/VolunteeringUkraineMap/package.json
@@ -12,31 +12,31 @@
     "copyfiles": "copyfiles -u 2 node_modules/leaflet/dist/images/* public/images"
   },
   "dependencies": {
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
-    "pnpm": "^8.6.5",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
+    "vue-router": "^4.2.4",
     "vue3-google-map": "^0.15.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "autoprefixer": "^10.4.13",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.34.0",
+    "eslint": "^8.44.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-tailwindcss": "^3.9.0",
     "eslint-plugin-vue": "^9.9.0",
-    "pnpm": "^8",
-    "postcss": "^8.4.21",
+    "leaflet": "^1.9.4",
+    "pnpm": "^8.6.6",
+    "postcss": "^8.4.25",
     "postcss-html": "^1.5.0",
-    "stylelint": "^15.2.0",
+    "stylelint": "^15.10.1",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^30.0.1",
     "tailwindcss": "^3.2.7",
-    "vite": "^4.1.4",
+    "vite": "^4.4.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.2.0",
     "vite-svg-loader": "^4.0.0"
