--- a/VolunteeringUkraineMap/package.json
+++ b/VolunteeringUkraineMap/package.json
@@ -12,9 +12,13 @@
     "copyfiles": "copyfiles -u 2 node_modules/leaflet/dist/images/* public/images"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "vue": "^3.4.26",
     "vue-router": "^4.3.0",
-    "vue3-google-map": "^0.20.0"
+    "vue3-google-map": "^0.20.0",
+    "axios": "^1.6.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
