--- a/VolunteeringUkraineMap/netlify.toml
+++ b/VolunteeringUkraineMap/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build"
+  command = "npm i --platform=linux --arch=x64 && npm run build"
   publish = "dist"
   environment = { NODE_VERSION = "18" }
   functions = "functions"
