--- a/VolunteeringUkraineMap/package.json
+++ b/VolunteeringUkraineMap/package.json
@@ -43,6 +43,11 @@
     "vite": "^5.4.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^5.3.1",
-    "vite-svg-loader": "^5.1.0"
+    "vite-svg-loader": "^5.1.0",
+    "rollup": "^4.9.5"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "^4.9.5",
+    "@rollup/rollup-linux-x64-gnu": "^4.9.5"
   }
 }
